# SAMR

./: README.md
data collection framework/: collect_data.cpp  mpi_simulation.cpp  profiling tools  promethus.yaml  record_data.py
dataset/: CMakeLists.txt  data analysis.cpp  data visualization.py  data_analysis.py  directory_structure.txt  generation.py  performance simulation.cpp  performance simulation.py  runetime_comp.py  test data analysis.cpp  test data analysis.py  test performance simulation.cpp  unit test for performance simulation.py
